# mjinx

./: .buildinfo  .gitignore  CONTRIBUTING.md  README.md  barriers.html  components.html  configuration.html  constraints.html  developer-notes.html  genindex.html  index.html  installation.html  joint_positions.npy  mypy.ini  objects.inv  problem.html  py-modindex.html  pyproject.toml  quick_start.html  references.html  search.html  searchindex.js  solvers.html  tasks.html  test.xml  typing.html  visualization.html
.doctrees/: barriers.doctree  components.doctree  configuration.doctree  constraints.doctree  developer-notes.doctree  environment.pickle  index.doctree  installation.doctree  problem.doctree  quick_start.doctree  references.doctree  solvers.doctree  tasks.doctree  typing.doctree  visualization.doctree
.github/workflows/: build.yml  docs.yml  mypy.yml  ruff.yml  tests.yml
_sources/: components.rst.txt  problem.rst.txt  solvers.rst.txt  typing.rst.txt  visualization.rst.txt
_static/: custom.css
benchmarks/: bench_global_ik_vmapped_output.py  bench_local_ik.py  bench_local_ik_vmapped_output.py
benchmarks/biped/: bench_mink.py  bench_mjinx.py
benchmarks/humanoid/: bench_mink.py  bench_mjinx.py
benchmarks/manipulator/: bench_mink.py  bench_mjinx.py
docs/: README.md  barriers.rst  components.rst  conf.py  configuration.rst  constraints.rst  developer-notes.rst  index.rst  installation.rst  problem.rst  quick_start.rst  references.bib  references.rst  solvers.rst  tasks.rst  typing.rst  visualization.rst
docs/css/: custom.css
examples/: alip_test.py  analytical_vs_qp_solver.py  assemble_problem.py  cassie_alip.py  cassie_squat.py  configuration.py  constrained_local_ik.py  g1_heart.py  g1_heart_constrained.py  g1_waving.py  global_ik.py  global_ik_scan.py  global_ik_vmapped_input.py  global_ik_vmapped_output.py  go2_squat.py  go2_squat_constrained.py  go2_squat_single.py  ik_manipulator.py  ik_manipulator_no_sim.py  local_ik.py  local_ik_geom_barrier.py  local_ik_scan.py  local_ik_vmapped_input.py  local_ik_vmapped_output.py  mjinx_vs_pink.py  solve_ik_lax_scan.py  test.py  test_frame_task.py  test_global_ik.py  test_global_ik_raw.py
examples/auxiliary/: assemble_problem.py  configuration.py  lore_accurate_jnt_ops.py
examples/g1_description/: g1.xml
examples/notebooks/: turoial.ipynb
examples/problem_solving/: global_ik_constrainted.py  global_ik_manipulator.py  global_ik_scan.py  local_ik_constrained.py  local_ik_manipulator.py  local_ik_manipulator_no_sim.py  local_ik_scan.py
examples/test_barriers/: test_joint_barrier.py  test_position_barrier.py
examples/test_tasks/: test_configuration_task.py  test_frame_task.py
examples/updated_interface/: global_ik.py  global_ik_vmapped_input.py  global_ik_vmapped_output.py  local_ik.py  local_ik_constrained.py  local_ik_vmapped_input.py  local_ik_vmapped_output.py
mjinx/: __init__.py  configuration.py  model.py  problem.py  solve_global_ik.py  solve_ik.py  solve_local_ik.py  typing.py  visualize.py
mjinx/barriers/: __init__.py  base.py  joint_barrier.py  pos_barrier.py  position_barrier.py
mjinx/components/: __init__.py  _base.py
mjinx/configuration/: __init__.py  _collision.py  _lie.py  _model.py
mjinx/solvers/: __init__.py  _base.py  _global_ik.py  _local_ik.py  base.py  global_ik.py  local_ik.py  solve_local_ik.py
mjinx/tasks/: __init__.py  base.py  com_task.py  frame_se3_task.py  joint_task.py  position_task.py
tests/example_tests/: local_ik_vmapped_input.py  local_ik_vmapped_output.py  test_global_ik_jit.py  test_global_ik_vmap.py  test_local_ik_jit.py  test_local_ik_vmap.py
tests/unit_tests/: test_problem.py  (+1 more)
(+73 files in other folders)
