[tool.poetry]
name = "mjinx"
version = "0.0.1"
description = "Numerical Inverse Kinematics based on JAX + MJX"
authors = [
    "Ivan Domrachev, <domrachev10@gmail.com>, Simeon Nedelchev <simkaned@gmail.com>", "Lev Kozlov <kozlov.l.a10@gmail.com>"
]   
readme = "README.md"
packages = [
  { include = "mjinx",},
]

[tool.poetry.dependencies]
python = "^3.10"
mujoco = "3.1.6"
mujoco_mjx = "3.1.6"
jaxlib = "^0.4"
jaxopt = "*"
# For strictrer versioning
jax = "^0.4"
robot_descriptions = "1.12"
jaxlie = "^1.4"
optax = "^0.2"
jax_dataclasses = "^1.6.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
ruff = "^0.1.13"
pytest = "^7.4.4"
mypy = "^1.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
line-length=120

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
