[project]
name = "mjinx"
version = "0.1.0"
description = "Numerical Inverse Kinematics based on JAX + MJX"
authors = [
  { name = "Ivan Domrachev", email = "domrachev10@gmail.com" },
  { name = "Simeon Nedelchev", email = "simkaned@gmail.com" },
  { name = "Lev Kozlov", email = "kozlov.l.a10@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = ["mujoco", "mujoco_mjx", "jaxlib>=0.4", "jaxopt", "jax>=0.4", "jaxlie>=1.4", "jax_dataclasses>=1.6.0", "optax>=0.2"]

[project.optional-dependencies]
dev = ["robot_descriptions>=1.12", "pre-commit", "ruff", "pytest"]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mjinx*"]

[tool.ruff]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
]
line-length = 120

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest]
filterwarnings = "ignore:.*U.*mode is deprecated:DeprecationWarning"
